@@ -3,6 +3,9 @@
 	* src/pdk/gen.c,
 	  support/regression/tests/gcc-torture-execute-20181120-1.c:
 	  Fix bug #2947.
+	* src/SDCC.lex,
+	  support/regression/tests/c2xkeywords.c:
+	  Support C2X keyword from N2457.
 
 2019-11-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
